Ensure files are truncuated to avoid layout breaking

--- a/src/components/Canvas/Canvas.module.scss
+++ b/src/components/Canvas/Canvas.module.scss
@@ -12,7 +12,7 @@
 
 .zoomControls {
   position: fixed;
-  top: 5%;
+  top: 8%;
   display: flex;
   gap: 8px;
   padding: 10px;
@@ -52,7 +52,7 @@ canvas {
 
 @media screen and (max-width: 768px) {
   .zoomControls {
-    top: 5%;
+    top: 13.5%;
     position: relative;
     transform: translateY(-100%);
   }
