--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -17,7 +17,7 @@
   padding: 12px;
   border-radius: 6px;
   background-color: $grayscale__950;
-  opacity: 0.35;
+  opacity: 0.75;
   &:hover {
     opacity: 1;
     color: $prim;
